# deepgram-voice-agent-client-llm-proxy

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
cloud_formation_template/: README.md
providers/: __init__.py  base.py  bedrock.py  openai.py
tests/: test_streaming.py
